RESOLVED FIXED74825
We don't pass all of the html5lib unsafe-text.dat tests
https://bugs.webkit.org/show_bug.cgi?id=74825
Summary We don't pass all of the html5lib unsafe-text.dat tests
Adam Barth
Reported 2011-12-18 15:00:53 PST
We don't pass all of the html5lib unsafe-text.dat tests
Attachments
Patch (7.07 KB, patch)
2011-12-18 15:07 PST, Adam Barth
no flags
Patch for landing (9.41 KB, patch)
2011-12-19 09:19 PST, Adam Barth
no flags
Adam Barth
Comment 1 2011-12-18 15:07:49 PST
Eric Seidel (no email)
Comment 2 2011-12-18 19:41:09 PST
Comment on attachment 119783 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=119783&action=review > Source/WebCore/ChangeLog:14 > + (WebCore::::shouldSkipNullCharacters): ::::? > Source/WebCore/ChangeLog:24 > + - We're supposed to replace NUL characters if the next character if the next? > Source/WebCore/html/parser/HTMLTreeBuilder.cpp:2821 > + if (m_framesetOk && !isAllWhitespaceOrReplacementCharacters(characters)) Seems this subtly may need a comment.
Adam Barth
Comment 3 2011-12-18 23:16:11 PST
Comment on attachment 119783 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=119783&action=review >> Source/WebCore/ChangeLog:24 >> + - We're supposed to replace NUL characters if the next character > > if the next? Yeah, this setting on the tokenizer affects future tokens. >> Source/WebCore/html/parser/HTMLTreeBuilder.cpp:2821 >> + if (m_framesetOk && !isAllWhitespaceOrReplacementCharacters(characters)) > > Seems this subtly may need a comment. I'm happy to add a comment. I'm not sure what it would say other than to look at a specific line in the spec. There's a test, which seems like the important thing.
Eric Seidel (no email)
Comment 4 2011-12-19 06:42:36 PST
Comment on attachment 119783 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=119783&action=review >>> Source/WebCore/ChangeLog:24 >>> + - We're supposed to replace NUL characters if the next character >> >> if the next? > > Yeah, this setting on the tokenizer affects future tokens. Sure, but the sentence makes no sense. >>> Source/WebCore/html/parser/HTMLTreeBuilder.cpp:2821 >>> + if (m_framesetOk && !isAllWhitespaceOrReplacementCharacters(characters)) >> >> Seems this subtly may need a comment. > > I'm happy to add a comment. I'm not sure what it would say other than to look at a specific line in the spec. There's a test, which seems like the important thing. If the spec mentions replacemnt characters here then that's fine. :)
Adam Barth
Comment 5 2011-12-19 09:19:07 PST
Created attachment 119870 [details] Patch for landing
WebKit Review Bot
Comment 6 2011-12-19 10:36:00 PST
Comment on attachment 119870 [details] Patch for landing Clearing flags on attachment: 119870 Committed r103247: <http://trac.webkit.org/changeset/103247>
WebKit Review Bot
Comment 7 2011-12-19 10:36:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.